--- a/src/experiments/config/arteria_lad.yaml
+++ b/src/experiments/config/arteria_lad.yaml
@@ -1,14 +1,14 @@
 base_params:
-  radius_in: 1.6 
-  length: 80 
-  radius_out: 1.1 
-  q_in: 70 
-  q_in_hyper: 225 
-  tree_volume: 70 
-  n_terminal: 20 
-  p_terminal: 1000 
-  murray_exponent: 3.0 
-  lambda: 2.0
+  radius_in: 1.6
+  length: 80
+  radius_out: 1.1
+  q_in: 2 #cm3/s
+  perf_pressure: 133000 # Bayre
+  q_in_hyper: 225
+  tree_volume: 70
+  n_terminal: 20
+  term_pressure: 80000 # Bayre
+  murray_exponent: 3.0
   closest_neighbours: 5
 
 matrix:
@@ -20,7 +20,7 @@ matrix:
 # Parámetros de simulación constantes para todos los experimentos
 simulation_params:
   solver: "stabilized_schur"
-  T: 0.1 
-  dt: 0.01 
-  mu: 0.0035 
-  rho: 0.00106 
+  T: 0.1
+  dt: 0.01
+  mu: 0.0035
+  rho: 0.00106
