experiment arteria lad adjust params

--- a/src/experiments/config/arteria_lad.yaml
+++ b/src/experiments/config/arteria_lad.yaml
@@ -1,21 +1,23 @@
 base_params:
-  radius_in: 1.6
+  radius_in: 1.5
+  radius_out: 0.65
   length: 80
-  radius_out: 1.1
+  coupling_slope: 0.05
   q_in: 2 #cm3/s
   perf_pressure: 133000 # Bayre
+  term_pressure: 80000 # Bayre
   q_in_hyper: 225
   tree_volume: 70
   n_terminal: 20
-  term_pressure: 80000 # Bayre
   murray_exponent: 3.0
   closest_neighbours: 5
 
 matrix:
-  hiperemia: [true, false]
-  factor_perdida_vasos: [0.0, 0.5]
-  reduccion_lumen: [0.0, 0.1, 0.2]
-  factor_dilatacion_hiperemia: [1.0]
+  # hiperemia: [true, false]
+  # factor_perdida_vasos: [0.0, 0.5]
+  # reduccion_lumen: [0.0, 0.1, 0.2]
+  # factor_dilatacion_hiperemia: [1.0]
+  reduccion_lumen: [0.5]
 
 # Parámetros de simulación constantes para todos los experimentos
 simulation_params:
