--- a/src/experiments/configs/test_tree.yaml
+++ b/src/experiments/configs/test_tree.yaml
@@ -15,8 +15,7 @@ base_params:
   tree_volume: 50.0
 
 simulation_params:
-  solver: "stabilized_schur"
-  T: 0.05
+  T: 0.2
   dt: 0.01
   mu: 0.0035
   rho: 0.00106
@@ -35,3 +34,11 @@ matrix:
       "inlet_velocity_parabolic_outlet_velocity_zero",
     ]
   geometry_type: ["tree"]
+  solver:
+    [
+      "stabilized_schur",
+      "stabilized_schur_stokes",
+      "stabilized_schur_ramping",
+      "stabilized_schur_adaptive",
+      "stabilized_schur_newtonls",
+    ]
